# easycab

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md  setup.md
docs/: report.tex
res/: client1.txt  client2.txt  client3.txt  client4.txt  locations.csv
src/: EC_Central.c  EC_Customer.c  EC_DE.c  EC_DE_ncurses_gui.c  EC_DE_ncurses_gui.h  EC_SE.c  common.c  common.h  data_structures.c  data_structures.h  gui.c  initialize.sql  kafka_module.c  kafka_module.h  ncurses_common.c  ncurses_common.h  ncurses_gui.c  ncurses_gui.h  socket_module.c  socket_module.h
visual studio/Raylib GUI/: Raylib GUI.cpp  Raylib GUI.sln  Raylib GUI.vcxproj  Raylib GUI.vcxproj.filters  common.cpp  common.h  packages.config
visual studio/Raylib GUI/Debug/: vc142.idb
visual studio/Raylib GUI/x64/Release/: Raylib GUI.exe.recipe  Raylib GUI.iobj  Raylib GUI.ipdb  Raylib GUI.vcxproj.FileListAbsolute.txt
